--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
-@import url(https://fonts.googleapis.com/css?family=Oswald|Roboto:400,700);
+/*Social media icons - contact page*/
 @import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.css);
-@import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.css);
-@import url(https://fonts.googleapis.com/css?family=Raleway:400,900);
+
 html, body {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -13,25 +12,16 @@ html, body {
           flex-direction: column;
   margin: 0;
   padding: 0;
-  font-family: courier-new, courier, monospace;
+  font-family: 'DM Sans';
 }
 
 .nav-wrapper a {
   color: white !important;
-  font-size: xx-large;
+  font-size: 4em;
   text-align: center;
   width: 100%;
 }
 
-.nav-wrapper {
-  padding-bottom: 5%;
-}
-
-main {
-  -webkit-box-flex: 1;
-      -ms-flex: 1 0 auto;
-          flex: 1 0 auto;
-}
 
 #page-container {
   min-height: 100vh;
@@ -41,49 +31,11 @@ main {
           flex-direction: column;
 }
 
-/* Top half page INTRO*/
-#top-row {
-  margin-top: 5%;
-  /*to give space below NAV*/
-}
 
-/*DIVIDER dashed mid of page*/
-.dash {
-  width: 100%;
-  height: 0;
-  border-top: 2px dashed black;
-  font-size: 0;
-  text-align: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin-top: 5%;
-}
-
-#h3-div {
-  margin-top: 5%;
-  margin-bottom: 5%;
-  padding-left: 5px;
-}
-
-h3 {
-  margin-bottom: 5%;
-  float: left;
-  position: absolute;
-}
-
-.col s4 {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
 
 /*NAVIGATOR: Change font color of top tabs*/
 .tab a {
-  color: black !important;
+  color: teal !important;
 }
 
 a {
@@ -119,11 +71,156 @@ a {
   border-bottom: 2px solid black;
 }
 
+
+
+
+
+/*ABOUT ME SECTION*/
+img {
+  border-radius: 10%;
+  max-width: 100%;
+  height: auto;
+}
+
+.about-me {
+  text-align: center;
+  width:100%;
+}
+
+.git-link {
+  color:teal;
+}
+
+.ul-icons {
+  display:inline-block;
+  width:100%;
+}
+
+.tooltip {
+  display:inline-block;
+}
+
+.material-icons {
+  font-size:3em;
+  color:black;
+}
+
+
+.arrow {
+  color: #2F4F4F;
+  margin: 2%;
+  font-size:large;
+}
+
+.icon:hover {
+
+  content: "279E"; 
+  -webkit-transition: transform 0.3s ease-out;
+  -moz-transition: transform 0.3s ease-out;
+  -ms-transition: transform 0.3s ease-out;
+  -o-transition: transform 0.3s ease-out;
+  transition: transform 0.3s ease-out;
+}
+
+.icon:hover {
+  color: #0c5449;
+  background-color:#fff;
+
+  -webkit-transform: translateX(4px);
+  -moz-transform: translateX(4px);
+  -ms-transform: translateX(4px);
+  -o-transform: translateX(4px);
+  transform: translateX(4px);
+}
+
+
+/* Tooltip text */
+.tooltiptext {
+  visibility: hidden;
+  width: 130px;
+  background-color: rgba(0, 0, 0, 0.8);
+  color: #fff;
+  text-align: center;
+  padding: 5px 0;
+  border-radius: 6px;
+ 
+  /* Position the tooltip text - see examples below! */
+  position: absolute;
+  z-index: 1;
+}
+
+/* Show the tooltip text when you mouse over the tooltip container */
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+}
+
+
+.ul-frontend {
+  text-align: right;
+  font-weight:bold;
+  font-size:2em;
+}
+
+.ul-backend {
+  text-align: left;
+  font-weight:bold;
+  font-size:2em;
+}
+
+
+
+/*DIVIDER mid of page*/
+.divider {
+  position:relative;
+  height:1px;
+  margin-bottom: 10%;
+  margin-top:10%;
+}
+
+.transparent {
+  content:"";
+	left: 5%;
+	right: 5%;
+	width: 100%;
+	height: 1px;
+	background-image: linear-gradient(to right, transparent, rgb(48,49,51), transparent);
+}
+
+
+
+/*PROJECTS CARD AREA -- INDEX PAGE*/
+.col s4 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 1%;
+}
+
+.card {
+  transition: .5s;
+  background:white;
+}
+
+.card:hover i, h5{
+  color: teal;
+}
+
+.card:hover{
+  transform: scale(1.03);
+  background:#EBECF0;
+}
+
+.card-action {
+  white-space: nowrap;
+  text-align:center;
+}
+
+
+/*------CONTACT PAGE-----*/
 #contact-container {
   position: fixed;
 }
 
-/*------CONTACT PAGE-----*/
 #contact-info {
   text-align: center;
   font-size: large;
@@ -204,6 +301,7 @@ h6 {
   -webkit-transition: .5s;
   transition: .5s;
   background-color: #322f30;
+  border-radius: 15%;
 }
 
 .fa-twitter:hover {
@@ -215,6 +313,7 @@ h6 {
   -webkit-transition: .5s;
   transition: .5s;
   background-color: #322f30;
+  border-radius: 15%;
 }
 
 .fa-linkedin:hover {
@@ -226,15 +325,19 @@ h6 {
   -webkit-transition: .5s;
   transition: .5s;
   background-color: #322f30;
+  border-radius: 15%;
 }
 
 .fa-github:hover {
   background-color: #5a32a3;
 }
 
-/*-----TIMELINE CODE----*/
+
+
+
+/*-----EXPERIENCE PAGE----*/
 body {
-  font-family: 'Raleway', sans-serif;
+  font-family: 'DM Sans', sans-serif;
   color: #333;
 }
 
