--- a/style.css
+++ b/style.css
@@ -167,6 +167,11 @@ img {
   font-size:2em;
 }
 
+.symfony {
+  text-align:center;
+  font-weight:bold;
+  font-size:2em;
+}
 
 
 /*DIVIDER mid of page*/
