--- a/2048/style.css
+++ b/2048/style.css
@@ -7,6 +7,30 @@ body {
   margin: 0;
 }
 
+
+.hero {
+  height: 100%;
+  width: 100%;
+  background-position: center;
+  background-image:url(cubes.jpg);
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  position: absolute;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.color-overlay {
+  width: 100%;
+  height: 100%;
+  background: black;
+  opacity: .7;
+  position: absolute;
+}
+
 .score {
   display:inline-block;
   text-align: center;
@@ -25,30 +49,25 @@ body {
   display: inline-block;
 }
 
+#WIP {
+  padding: auto;
+  font-size:1em;
+  color: #fff;
+  padding-bottom:0;
+}
+
 h1 {
   font-size: 3em;
 }
 
 .center {
-  color: white;
+  color: ;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   text-align: center;
 }
 
-.hero {
-  height: 100%;
-  width: 100%;
-  background-position: center;
-  background-image:url(cubes.jpg);
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  position: absolute;
-  background-color:black;
-}
 
 .game-container {
   width: 600px;
@@ -63,7 +82,6 @@ h1 {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  position: relative;
   border: 3px solid linear-gradient(#f9f047, #0fd850);
   border-radius: 4%;
   background: #1D1F20;
@@ -114,4 +132,3 @@ h1 {
   transition: transform 300ms ease-in-out;
   transition: transform 300ms ease-in-out, -webkit-transform 300ms ease-in-out;
 }
-/*# sourceMappingURL=style.css.map */
