--- a/style.css
+++ b/style.css
@@ -31,6 +31,11 @@ html, body {
           flex-direction: column;
 }
 
+/*IMG TESTING size*/
+img.resize {
+width:150px;
+height:200px;
+}
 
 
 /*NAVIGATOR: Change font color of top tabs*/
