--- a/style.css
+++ b/style.css
@@ -31,11 +31,12 @@ html, body {
           flex-direction: column;
 }
 
-/*IMG TESTING size*/
+/*IMG TESTING size
 #image {
 max-width:50%;
 max-height: 50%;
 }
+*/
 
 
 /*NAVIGATOR: Change font color of top tabs*/
